fix: header z-index

--- a/css/custom.css
+++ b/css/custom.css
@@ -12,6 +12,7 @@ body, html {
     position: fixed;
     background: #fff;
     box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.2);
+    z-index: 9999;
 }
 
 #header .navbar-collapse {
